<resources>
    <string name="app_name">Desafio App Kotlin</string>

    <!--TELA LISTAGEM-->
    <string name="txt_matricula">Matrícula:</string>
    <string name="txt_cpf">CPF:</string>
    <string name="txt_email">E-mail:</string>
    <string name="add_user_fragment">Add user</string>

    <string name="txt_delete_user">Deletar</string>
    <string name="btn_update">Atualizar</string>

    <!--TELA CADASTRO/ATUALIZACAO-->
    <string name="hint_matricula">Matricula <font color='#FF0000'>*</font></string>
    <string name="hint_cpf">CPF <font color='#FF0000'>*</font></string>
    <string name="hint_email">E-mail <font color='#FF0000'>*</font></string>
    <string name="desc_btn_add_new_user">Botão para cadastrar novo usuário</string>
</resources>